reaching out for alignment issues with my learn more button

--- a/css/index.css
+++ b/css/index.css
@@ -227,13 +227,28 @@ p {
 .content-cards{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 .card{
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
+    display:flex ;
+    flex-flow: column wrap;
+    width: 45%;
+    justify-content: left;
 }
-
+.card a{
+    background-color:white;
+    border: 2px solid;
+    color: black;
+    border-radius: 10px;
+    padding: 10px 13px;
+    text-align: center;
+    text-decoration: none;
+    display:inline-block;
+    font-size: 16px;
+    margin: 10px 30% 10px;
+}
 
 .bottom-content {
     display: flex;
